--- a/ProgramacaoWeb/Site-js/index.html
+++ b/ProgramacaoWeb/Site-js/index.html
@@ -19,9 +19,9 @@
         </div>
         <ul class="nav-list">
           <li><a href="#">Início</a></li>
-          <li><a href="/ProgramacaoWeb/Fashion/index.html">Sobre</a></li>
-          <li><a href="/ProgramacaoWeb/Site-Range/index.html">Projetos</a></li>
-          <li><a href="/ProgramacaoWeb/Site-header/index.html">Contato</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Projetos</a></li>
+          <li><a href="#">Contato</a></li>
         </ul>
       </nav>
     </header>
