Atualizaçao do portfolio
atualizaçao do portfolio mudanças na estetica e funcionamento do msm

--- a/ProgramacaoWeb/Site-js/index.html
+++ b/ProgramacaoWeb/Site-js/index.html
@@ -24,8 +24,11 @@
           <li><a href="#">Contato</a></li>
         </ul>
       </nav>
+
     </header>
-    <main></main>
+    <main class="background"> 
+      
+    </main>
     <script src="mobile-navbar.js"></script>
   </body>
 </html>
