--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="pt-BR">
-
+    image.png
 <head>
     <title>Projeto Strata</title>
     <meta charset="UTF-8">
@@ -33,6 +33,14 @@
     <main>
 
         <h3>Recent Works</h3><br>
+
+        <div class="card">
+            <img class="card-img-top" src="images/fulls/06.png" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Menu</h5>
+                <a href="ProgramacaoWeb/Menu/index.html" title="Veja mais" class="button-default button-default-stroke button-default-big">Veja mais</a>
+            </div>
+        </div>
 
         <div class="card">
             <img class="card-img-top" src="images/fulls/01.png" alt="Card image cap">
