Adiçao do projeto Relogio
Adiçao do projeto Relogio

--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
         </div>
 
         <div class="card">
+            <img class="card-img-top" src="images/thumbs/Relogio.png" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Menu</h5>
+                <a href="ProgramacaoWeb/Relogio/index.html" title="Veja mais" class="button-default button-default-stroke button-default-big">Veja mais</a>
+            </div>
+        </div>
+
+        <div class="card">
             <img class="card-img-top" src="images/fulls/01.png" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Web-Fundamentos</h5>
