--- a/ProgramacaoWeb/Relogio/index.html
+++ b/ProgramacaoWeb/Relogio/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="Adalberto Camargo" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Digial Clock</title>
+    <title>Relógio Digital</title>
 </head>
+
 <body>
-    <div class="clock">
-         <div>
-        <span id="horas">00</span>
-        <span class="time">Horas</span>
+    <div class="relogio">
+        <div>
+            <span id="horas">00</span>
+            <span class="tempo">Horas</span>
         </div>
 
-        <div  >
-        <span id="minutos">00</span>
-        <span class="time">Minutos</span>
+        <div>
+            <span id="minutos">00</span>
+            <span class="tempo">Minutos</span>
         </div>
 
-        <div  >
-        <span id="segundos">00</span>
-        <span class="time">Segundos</span>
+        <div>
+            <span id="segundos">00</span>
+            <span class="tempo">Segundos</span>
         </div>
-</div>
+    </div>
 
-
-    
+    <script src="script.js"></script>
 </body>
+
 </html>
+
+
+<!--FEITO POR ADALBERTO CAMARGO NETO-->
