--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="pt-BR">
+
 <head>
-    <title>Projeto Strata</title>
+    <title>Portfolio</title>
     <meta charset="UTF-8">
     <meta name="author" content="Adalberto camargo">
     <meta name="description" content="descriçao">
@@ -10,7 +11,7 @@
         integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> 
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="estilo.css">
 </head>
@@ -37,7 +38,8 @@
             <img class="card-img-top" src="images/fulls/06.png" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Menu</h5>
-                <a href="ProgramacaoWeb/Menu/index.html" title="Veja mais" class="button-default button-default-stroke button-default-big">Veja mais</a>
+                <a href="ProgramacaoWeb/Menu/index.html" title="Veja mais"
+                    class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
 
@@ -45,7 +47,8 @@
             <img class="card-img-top" src="images/thumbs/Relogio.png" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Menu</h5>
-                <a href="ProgramacaoWeb/Relogio/index.html" title="Veja mais" class="button-default button-default-stroke button-default-big">Veja mais</a>
+                <a href="ProgramacaoWeb/Relogio/index.html" title="Veja mais"
+                    class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
 
@@ -53,35 +56,40 @@
             <img class="card-img-top" src="images/fulls/01.png" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Web-Fundamentos</h5>
-                <a href="ProgramacaoWeb/Curso-Web-Fundamentos/index.html" title="Veja mais" class="button-default button-default-stroke button-default-big">Veja mais</a>
+                <a href="ProgramacaoWeb/Curso-Web-Fundamentos/index.html" title="Veja mais"
+                    class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
         <div class="card">
             <img class="card-img-top" src="images/fulls/02.png" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Fashion</h5>
-                <a href="ProgramacaoWeb/Fashion/index.html" title="Veja mais" class="button-default button-default-stroke button-default-big">Veja mais</a>
+                <a href="ProgramacaoWeb/Fashion/index.html" title="Veja mais"
+                    class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
         <div class="card">
             <img class="card-img-top" src="images/fulls/03.png" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Netflix</h5>
-                <a href="ProgramacaoWeb/Netflix/index.html" title="Veja mais" class="button-default button-default-stroke button-default-big">Veja mais</a>
+                <a href="ProgramacaoWeb/Netflix/index.html" title="Veja mais"
+                    class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
         <div class="card">
             <img class="card-img-top" src="images/fulls/04.png" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Site-Js</h5>
-                <a href="ProgramacaoWeb/Site-js/index.html" title="Veja mais" class="button-default button-default-stroke button-default-big">Veja mais</a>
+                <a href="ProgramacaoWeb/Site-js/index.html" title="Veja mais"
+                    class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
         <div class="card">
             <img class="card-img-top" src="images/fulls/05.png" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Site-Range</h5>
-                <a href="ProgramacaoWeb/Site-Range/index.html" title="Veja mais" class="button-default button-default-stroke button-default-big">Veja mais</a>
+                <a href="ProgramacaoWeb/Site-Range/index.html" title="Veja mais"
+                    class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
         <div class="contact">
