--- a/ProgramacaoWeb/Tela de Loguin/index.html
+++ b/ProgramacaoWeb/Tela de Loguin/index.html
@@ -10,15 +10,10 @@
 </head>
 
 <body>
-             <h1 class="principal">Dante</h1>
-             <p>brasileiro,solteiro, 21 anos</p>
-             <h1 class="b">Objetivo </h1>
-             <p>Front-End Developer, desenvolvedor</p>
-             <h1 class="b">Experiencia proficional</h1>
-             <h2> <b> <a href="#">UOL</a> - 12/2014 ate 02/2015 - 2 meses </b></h2>
-             <p> <b> analista programador- 2 meses </b></p>
-             <p>desenvolvimento WEB</p>
+            
+             <circle class="Name" cx="173" cy="1311" r="10" fill="rgb(153,153,153)"></circle>
 
+            
 </body>
 
 </html>
