--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header>
         <a href="index.html" class="main-header-link imagem-link">
-            <img class="perfil" src="images/avatar.jpg" alt="texto qualquer">
+            <img class="perfil" src="images/fulls/semfoto.png" alt="texto qualquer">
         </a>
         <h1 class="main-header-title">
             <br>
@@ -39,7 +39,7 @@
             <img class="card-img-top" src="images/fulls/foto 5.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Segunda - Feira</h5>
-                <a href="ProgramacaoWeb/Menu/index.html" title="Veja mais"
+                <a href="" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -48,7 +48,7 @@
             <img class="card-img-top" src="images/fulls/foto 2.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Terça - Feira</h5>
-                <a href="ProgramacaoWeb/Relogio/index.html" title="Veja mais"
+                <a href="" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -57,7 +57,7 @@
             <img class="card-img-top" src="images/fulls/foto 3.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Quarta - Feira</h5>
-                <a href="ProgramacaoWeb/Curso-Web-Fundamentos/index.html" title="Veja mais"
+                <a href="" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -65,7 +65,7 @@
             <img class="card-img-top" src="images/fulls/foto 4.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Quinta - Feira</h5>
-                <a href="ProgramacaoWeb/Fashion/index.html" title="Veja mais"
+                <a href="" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -73,7 +73,7 @@
             <img class="card-img-top" src="images/fulls/foto 6.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Sexta - Feira</h5>
-                <a href="ProgramacaoWeb/Netflix/index.html" title="Veja mais"
+                <a href="" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -81,7 +81,7 @@
             <img class="card-img-top" src="images/fulls/foto 2.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title"> Sabado </h5>
-                <a href="ProgramacaoWeb/Site-js/index.html" title="Veja mais"
+                <a href="" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -89,7 +89,7 @@
             <img class="card-img-top" src="images/fulls/foto 3.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Domingo</h5>
-                <a href="ProgramacaoWeb/Site-Range/index.html" title="Veja mais"
+                <a href="" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
