--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1 class="main-header-title">
             <br>
             <strong>Nome do usuario</strong>
-            <hr>
+            <hr class="ttt">
             Bem Vindo a sua tabelinha da semana<br>
         </h1>
     </header>
