--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <body>
 
     <header>
-        <a href="index.html" class="main-header-link imagem-link">
+        <a href="/autis/segunda.html" class="main-header-link imagem-link">
             <img class="perfil" src="images/fulls/semfoto.png" alt="texto qualquer">
         </a>
         <h1 class="main-header-title">
             <br>
             <strong>Nome do usuario</strong>
-            <hr class="ttt">
+            <hrbe>
             Bem Vindo a sua tabelinha da semana<br>
         </h1>
     </header>
