--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 
 <head>
-    <title>Portfolio</title>
+    <title>Tabelinha</title>
     <meta charset="UTF-8">
     <meta name="author" content="Adalberto camargo">
     <meta name="description" content="descriçao">
@@ -31,15 +31,15 @@
     </header>
 
     <main>
-
+        <div class="ddd">
         <h3>Tabela da semana</h3><br>
-        <h5>Selecione o dia da semana</h5>
+        <h5>Selecione o dia da semana</h5></div>
 
         <div class="card">
             <img class="card-img-top" src="images/fulls/foto 5.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Segunda - Feira</h5>
-                <a href="" title="Veja mais"
+                <a href="/autis/segunda.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -48,7 +48,7 @@
             <img class="card-img-top" src="images/fulls/foto 2.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Terça - Feira</h5>
-                <a href="" title="Veja mais"
+                <a href="/autis/terça.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -57,7 +57,7 @@
             <img class="card-img-top" src="images/fulls/foto 3.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Quarta - Feira</h5>
-                <a href="" title="Veja mais"
+                <a href="/autis/quarta.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -65,7 +65,7 @@
             <img class="card-img-top" src="images/fulls/foto 4.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Quinta - Feira</h5>
-                <a href="" title="Veja mais"
+                <a href="/autis/quinta.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -73,7 +73,7 @@
             <img class="card-img-top" src="images/fulls/foto 6.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Sexta - Feira</h5>
-                <a href="" title="Veja mais"
+                <a href="/autis/sexta.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -81,7 +81,7 @@
             <img class="card-img-top" src="images/fulls/foto 2.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title"> Sabado </h5>
-                <a href="" title="Veja mais"
+                <a href="/autis/sabado.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -89,7 +89,7 @@
             <img class="card-img-top" src="images/fulls/foto 3.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Domingo</h5>
-                <a href="" title="Veja mais"
+                <a href="/autis/domingo.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
