--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <header>
-        <a href="/autis/segunda.html" class="main-header-link imagem-link">
+        <a href="" class="main-header-link imagem-link">
             <img class="perfil" src="images/fulls/semfoto.png" alt="texto qualquer">
         </a>
         <h1 class="main-header-title">
