--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <img class="card-img-top" src="images/dias/segunda.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Segunda - Feira</h5>
-                <a href="/autis/segunda.html" title="Veja mais"
+                <a href="autis/segunda.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -52,7 +52,7 @@
             <img class="card-img-top" src="images/dias/terça.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Terça - Feira</h5>
-                <a href="/autis/terça.html" title="Veja mais"
+                <a href="autis/terça.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -61,7 +61,7 @@
             <img class="card-img-top" src="images/dias/quarta.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Quarta - Feira</h5>
-                <a href="/autis/quarta.html" title="Veja mais"
+                <a href="autis/quarta.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -69,7 +69,7 @@
             <img class="card-img-top" src="images/dias/quinta.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Quinta - Feira</h5>
-                <a href="/autis/quinta.html" title="Veja mais"
+                <a href="autis/quinta.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -77,7 +77,7 @@
             <img class="card-img-top" src="images/dias/sexta.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Sexta - Feira</h5>
-                <a href="/autis/sexta.html" title="Veja mais"
+                <a href="autis/sexta.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -85,7 +85,7 @@
             <img class="card-img-top" src="images/dias/sabado.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title"> Sabado </h5>
-                <a href="/autis/sabado.html" title="Veja mais"
+                <a href="autis/sabado.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
         </div>
@@ -93,9 +93,11 @@
             <img class="card-img-top" src="images/dias/domingo.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Domingo</h5>
-                <a href="/autis/domingo.html" title="Veja mais"
+                <a href="autis/domingo.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Veja mais</a>
             </div>
+
+            
         </div>
         <div class="contact">
            
@@ -104,7 +106,7 @@
     </main>
 
     <footer>
-        <a href="/ProgramacaoWeb/Site-Range/index.html" title="Veja mais"
+        <a href="ProgramacaoWeb/Site-Range/index.html" title="Veja mais"
                     class="button-default button-default-stroke button-default-big">Para Pais</a>
                     <br><br><br>
 
