--- a/ProgramacaoWeb/Site-Range/index.html
+++ b/ProgramacaoWeb/Site-Range/index.html
@@ -19,7 +19,7 @@
         
         <nav class="top-nav">
             <ul>
-                <li> <a href="/index.html">Voltar a tabelinha</a></li>
+                <li> <a href="../index.html">Voltar a tabelinha</a></li>
                 <li> <a href="#">Serviços</a></li>
                 <li> <a href="#">Contato</a></li>
             </ul>
