--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="images/favicon.ico"/>
     <title>Flappy Bird Game</title>
-    <link rel="stylesheet" href="/estilo.css">
-    <script src="/scripts.js" defer></script>
+    <link rel="stylesheet" href="estilo.css">
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <div class="background"></div>
